--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-.week1 {
+.blogposts {
 	background: teal;
 	font-family: Georgia, serif;
 	font-size: small;
@@ -7,50 +7,6 @@
 	padding: 1px;
 	border: 5px solid;
 	border-radius: 2px;
-}
-
-.week2 {
-	background: salmon;
-	font-family: "Times New Roman", Times, serif;
-	font-size: medium;
-	color: grey;
-	line-height: 1.5;
-	padding: 3px;
-	border: 5px solid;
-	border-radius: 5px;
-}
-
-.week3 {
-	background: grey;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: large;
-	color: darkblue;
-	line-height: 2;
-	padding: 5px;
-	border: 5px solid;
-	border-radius: 15px;
-}
-
-.week4 {
-	background: lightblue;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: x-large;
-	color: darkgrey;
-	line-height: 2.5;
-	padding: 10px;
-	border: 5px solid;
-	border-radius: 20px;
-}
-
-.week5 {
-	background: tomato;
-	font-family: "Lucida Console", Monaco, monospace;
-	font-size: xx-large;
-	color: #FFF0F5;
-	line-height: 3;
-	padding: 12px;
-	border: 5px solid;
-	border-radius: 25px;
 }
 
 .kfooter {
