--- a/templates/blogposts.hbs
+++ b/templates/blogposts.hbs
@@ -1,5 +1,5 @@
 
-{{#each blogposts}}{{title}}
-	<p>{{content}}</p><br />
+{{#each blogposts}}<h2><strong>{{title}}</strong></h2>
+	<p>{{content}}</p>
 	<p>{{author}}, {{date}}</p>
 {{/each}}
